--- a/lib/quick/quick.qrc
+++ b/lib/quick/quick.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/qt-project.org/webengine">
         <file>qml/ContextMenu.qml</file>
+        <file>qml/MenuContents.qml</file>
     </qresource>
 </RCC>
