That approach seems to work nicely, needs cleanup now
Change-Id: Ifac1b4ae62e2f00098199b8fa4d4d68c4638d69d

--- a/examples/qtquick/resources.qrc
+++ b/examples/qtquick/resources.qrc
@@ -1,5 +1,6 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file>quickwindow.qml</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>quickwindow.qml</file>
+        <file>ContextMenuExtras.qml</file>
+    </qresource>
 </RCC>
